# exostat

./: .gitignore  Cargo.toml  build.sh  exostat  get_keyboard_layout.sh  readme.md
scripts/: benchmark.sh  report_graphic_gen.py  selected_benchmark.sh  summarize.py  summerize.sh
src/: .main.rs.swp  battery_util.rs  config.rs  cpu_util.rs  keyboard_util.rs  main.rs  network_util.rs  text_builders.rs  utility.rs
