[package]
name = "exostat"
version = "1.0.0"
authors = ["Gergely Bencsik <becsegergely@gmail.com>"]
edition = "2018"

[dependencies]
systemstat = "0.2.3"
chrono = "0.4.6"
mimalloc = { version = "0.1.17", default-features = false }
lock_keys = "1.1.0"

[profile.release]
opt-level = 2
overflow-checks = false
lto = "fat"
codegen-units = 1
debug = true
rpath = false
incremental = false
debug-assertions = false
panic = 'abort'
